--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 
 <body class="font-inter-font">
@@ -37,7 +38,7 @@
         <section id="banner">
             <div class="banner-image">
                 <div class="banner-content">
-                    <button>Early Access Now Open</button>
+                    <button class="early-btn">Early Access Now Open</button>
                     <h1>Structured Thinking,<br><span>Not Just Note-Taking.</span></h1>
                     <p>A private space to store notes, links, and learning summaries — designed to <br>
                         help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
@@ -45,8 +46,37 @@
                 <div>
                     <button class="btn">Start Building Your Vault <img class="arrow" src="./assets/ArrowRight.png"
                             alt=""></button>
-                    <button>See How It Works</button>
+                    <button class="banner-btn"><i class="fa-solid fa-play"></i>See How It
+                        Works</button>
                 </div>
+            </div>
+        </section>
+
+        <section class="notes-section">
+            <h1>Notes Don't Fail, Structure Does.</h1>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </section>
+
+        <section id="cards">
+            <div class="card-container">
+                <div class="vector-border"><img class="vector" src="./assets/Vector.png" alt=""></div>
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="card-container">
+                <div class="vector-border"><img class="vector" src="./assets/Bookmarks.png" alt=""></div>
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="card-container">
+                <div class="vector-border"><img class="vector" src="./assets/Brain.png" alt=""></div>
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="card-container">
+                <div class="vector-border"><img class="vector" src="./assets/Info.png" alt=""></div>
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
             </div>
         </section>
     </header>
