--- a/index.html
+++ b/index.html
@@ -60,23 +60,25 @@
         <section id="cards">
             <div class="card-container">
                 <div class="vector-border"><img class="vector" src="./assets/Vector.png" alt=""></div>
-                <h2>Scattered notes</h2>
-                <p>Your ideas live in 10 different apps, none of them connected.</p>
+                <h2>Scattered Notes</h2>
+                <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
             </div>
             <div class="card-container">
                 <div class="vector-border"><img class="vector" src="./assets/Bookmarks.png" alt=""></div>
-                <h2>Scattered notes</h2>
-                <p>Your ideas live in 10 different apps, none of them connected.</p>
+                <h2>Bookmark Overload</h2>
+                <p>Hundreds of saved links you'll never <br> revisit or remember.</p>
             </div>
             <div class="card-container">
                 <div class="vector-border"><img class="vector" src="./assets/Brain.png" alt=""></div>
-                <h2>Scattered notes</h2>
-                <p>Your ideas live in 10 different apps, none of them connected.</p>
+                <h2>No Idea Connections</h2>
+                <p>Insights stay isolated, never <br> building into bigger understanding.</p>
             </div>
             <div class="card-container">
                 <div class="vector-border"><img class="vector" src="./assets/Info.png" alt=""></div>
-                <h2>Scattered notes</h2>
-                <p>Your ideas live in 10 different apps, none of them connected.</p>
+                <h2>Forgetting What
+                    <br> You Learned
+                </h2>
+                <p>Knowledge fades because there's <br> no system to retain it.</p>
             </div>
         </section>
     </header>
