--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </div>
         </section>
 
+
+    </header>
+    <main>
         <section class="notes-section">
             <h1>Notes Don't Fail, Structure Does.</h1>
             <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
@@ -59,31 +62,52 @@
 
         <section id="cards">
             <div class="card-container">
-                <div class="vector-border"><img class="vector" src="./assets/Vector.png" alt=""></div>
+                <div class="image-border"><img class="image" src="./assets/Vector.png" alt=""></div>
                 <h2>Scattered Notes</h2>
                 <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
             </div>
             <div class="card-container">
-                <div class="vector-border"><img class="vector" src="./assets/Bookmarks.png" alt=""></div>
+                <div class="image-border"><img class="image" src="./assets/Bookmarks.png" alt=""></div>
                 <h2>Bookmark Overload</h2>
                 <p>Hundreds of saved links you'll never <br> revisit or remember.</p>
             </div>
             <div class="card-container">
-                <div class="vector-border"><img class="vector" src="./assets/Brain.png" alt=""></div>
+                <div class="image-border"><img class="image" src="./assets/Brain.png" alt=""></div>
                 <h2>No Idea Connections</h2>
                 <p>Insights stay isolated, never <br> building into bigger understanding.</p>
             </div>
             <div class="card-container">
-                <div class="vector-border"><img class="vector" src="./assets/Info.png" alt=""></div>
+                <div class="image-border"><img class="image" src="./assets/Info.png" alt=""></div>
                 <h2>Forgetting What
                     <br> You Learned
                 </h2>
                 <p>Knowledge fades because there's <br> no system to retain it.</p>
             </div>
         </section>
-    </header>
-    <main>
 
+        <!-- brain section -->
+
+        <section id="brain-section">
+            <div>
+                <img src="./assets/knowledge.png" alt="">
+            </div>
+            <div class="brain">
+                <p class="para">THE SOLUTION</p>
+                <h1>Your second brain,
+                    <br> structured by design.
+                </h1>
+                <p class="para-2">Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking
+                    environment
+                    where every
+                    note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
+                <ul>
+                    <li>Capture ideas with structure built-in from day one</li>
+                    <li>Connect related concepts automatically as you write</li>
+                    <li>Build lasting knowledge through reflection prompts</li>
+                    <li>Find anything instantly with semantic search</li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <footer>
