--- a/index.html
+++ b/index.html
@@ -99,19 +99,49 @@
                 <p class="para-2">Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking
                     environment
                     where every
-                    note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
-                <ul>
-                    <li>Capture ideas with structure built-in from day one</li>
-                    <li>Connect related concepts automatically as you write</li>
-                    <li>Build lasting knowledge through reflection prompts</li>
-                    <li>Find anything instantly with semantic search</li>
+                    note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
+                <ul class="feature-list">
+                    <li>
+                        <!-- <img src="./assets/CheckCircle.png" alt=""> -->
+                        Capture ideas with structure
+                        built-in from day one
+                    </li>
+                    <li>
+                        <!-- <img src="./assets/CheckCircle.png" alt=""> -->
+                        Connect related concepts automatically as you write
+                    </li>
+                    <li>
+                        <!-- <img src="./assets/CheckCircle.png" alt=""> -->
+                        Build lasting knowledge through reflection
+                        prompts
+                    </li>
+                    <li>
+                        <!-- <img src="./assets/CheckCircle.png" alt=""> -->
+                        Find anything instantly with semantic search
+                    </li>
                 </ul>
+            </div>
+        </section>
+
+        <!-- challenge section -->
+
+        <section id="ready-part-01">
+            <div class="ready-part-02">
+                <h2>Ready to think more clearly?</h2>
+                <p>Join thousands of learners who are building their personal knowledge vaults.
+                    <br> Start free, no credit card
+                    required.
+                </p>
+                <button class="btn">Get Early Access <img class="arrow" src="./assets/ArrowRight.png" alt=""></button>
+                <p>Free during early access • No credit card needed</p>
             </div>
         </section>
     </main>
 
     <footer>
+        <div>
 
+        </div>
     </footer>
 </body>
 
