--- a/index.html
+++ b/index.html
@@ -138,10 +138,24 @@
         </section>
     </main>
 
-    <footer>
-        <div>
+    <!-- footer section -->
 
+    <footer>
+        <div class="footer-part">
+            <div>
+                <img class="logo" src="./assets/logo-navbar.png" alt="">
+            </div>
+            <div class="social-part">
+                <p>Social Links</p>
+                <div>
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                </div>
+            </div>
         </div>
+        <hr class="footer-line">
+        <p class="footer-last">© 2026 Personal Knowledge Vault. All rights reserved.</p>
     </footer>
 </body>
 
