--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         <section id="banner">
             <div class="banner-image">
                 <div class="banner-content">
-                    <button class="early-btn">Early Access Now Open</button>
+                    <button class="early-btn"><i class="fa-regular fa-circle-dot"></i> Early Access Now Open</button>
                     <h1>Structured Thinking,<br><span>Not Just Note-Taking.</span></h1>
                     <p>A private space to store notes, links, and learning summaries — designed to <br>
                         help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 </div>
                 <div>
-                    <button class="btn">Start Building Your Vault <img class="arrow" src="./assets/ArrowRight.png"
+                    <button class="btn"> Start Building Your Vault <img class="arrow" src="./assets/ArrowRight.png"
                             alt=""></button>
-                    <button class="banner-btn"><i class="fa-solid fa-play"></i>See How It
+                    <button class="banner-btn"><i class="fa-solid fa-play"></i> See How It
                         Works</button>
                 </div>
             </div>
@@ -62,24 +62,32 @@
 
         <section id="cards">
             <div class="card-container">
-                <div class="image-border"><img class="image" src="./assets/Vector.png" alt=""></div>
+                <div class="image-box">
+                    <div class="image-border"><img src="./assets/Vector.png" alt=""></div>
+                </div>
                 <h2>Scattered Notes</h2>
                 <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
             </div>
             <div class="card-container">
-                <div class="image-border"><img class="image" src="./assets/Bookmarks.png" alt=""></div>
+                <div class="image-box">
+                    <div class="image-border"><img src="./assets/Bookmarks.png" alt=""></div>
+                </div>
                 <h2>Bookmark Overload</h2>
                 <p>Hundreds of saved links you'll never <br> revisit or remember.</p>
             </div>
             <div class="card-container">
-                <div class="image-border"><img class="image" src="./assets/Brain.png" alt=""></div>
+                <div class="image-box">
+                    <div class="image-border"><img src="./assets/Brain.png" alt=""></div>
+                </div>
                 <h2>No Idea Connections</h2>
                 <p>Insights stay isolated, never <br> building into bigger understanding.</p>
             </div>
             <div class="card-container">
-                <div class="image-border"><img class="image" src="./assets/Info.png" alt=""></div>
+                <div class="image-box">
+                    <div class="image-border"><img src="./assets/Info.png" alt=""></div>
+                </div>
                 <h2>Forgetting What
-                    <br> You Learned
+                    <br class="card-br"> You Learned
                 </h2>
                 <p>Knowledge fades because there's <br> no system to retain it.</p>
             </div>
@@ -93,32 +101,32 @@
             </div>
             <div class="brain">
                 <p class="para">THE SOLUTION</p>
-                <h1>Your second brain,
-                    <br> structured by design.
+                <h1>Your Second Brain,
+                    <br> Structured By Design.
                 </h1>
                 <p class="para-2">Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking
                     environment
                     where every
                     note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
                 <ul class="feature-list">
-                    <li>
-                        <!-- <img src="./assets/CheckCircle.png" alt=""> -->
-                        Capture ideas with structure
-                        built-in from day one
-                    </li>
-                    <li>
-                        <!-- <img src="./assets/CheckCircle.png" alt=""> -->
-                        Connect related concepts automatically as you write
-                    </li>
-                    <li>
-                        <!-- <img src="./assets/CheckCircle.png" alt=""> -->
-                        Build lasting knowledge through reflection
-                        prompts
-                    </li>
-                    <li>
-                        <!-- <img src="./assets/CheckCircle.png" alt=""> -->
-                        Find anything instantly with semantic search
-                    </li>
+                    <div class="circle">
+                        <div><i class="fa-regular fa-circle-check"></i></div>
+                        <div>Capture ideas with structure
+                            built-in from day one</div>
+                    </div>
+                    <div class="circle">
+                        <div><i class="fa-regular fa-circle-check"></i></div>
+                        <div>Connect related concepts automatically as you write</div>
+                    </div>
+                    <div class="circle">
+                        <div><i class="fa-regular fa-circle-check"></i></div>
+                        <div>Build lasting knowledge through reflection
+                            prompts</div>
+                    </div>
+                    <div class="circle">
+                        <div><i class="fa-regular fa-circle-check"></i></div>
+                        <div>Find anything instantly with semantic search</div>
+                    </div>
                 </ul>
             </div>
         </section>
